--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
     </nav>
 
     <article>
-        <h2>基本介绍</h2>
-        <p>欢迎来到LunTsunami博客！在这里，我将分享关于编程的知识和经验，主要方向包括C++、C#、NET和Linux。希望这些文章能对你有所帮助和启发。</p>
+        <p>『虚无』是万物的终章，『毁灭』是万物的终结，『存护』是永恒的守护。</p>
     </article>
 
     <section id="cpp">
